--- a/src/componentes/wallpeaper.jsx/particlesjs-config.json
+++ b/src/componentes/wallpeaper.jsx/particlesjs-config.json
@@ -1,20 +1,20 @@
 {
   "particles": {
     "number": {
-      "value": 48,
+      "value": 114,
       "density": {
-        "enable": false,
+        "enable": true,
         "value_area": 800
       }
     },
     "color": {
-      "value": "#fd9601"
+      "value": "#ffffff"
     },
     "shape": {
       "type": "circle",
       "stroke": {
         "width": 0,
-        "color": "#fd9601"
+        "color": "#000000"
       },
       "polygon": {
         "nb_sides": 5
@@ -42,13 +42,13 @@
         "enable": false,
         "speed": 40,
         "size_min": 0.1,
-        "sync": true
+        "sync": false
       }
     },
     "line_linked": {
       "enable": true,
       "distance": 150,
-      "color": "#fd9601",
+      "color": "#ffffff",
       "opacity": 0.4,
       "width": 1
     },
