--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@nextui-org/react": "^2.2.9",
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
+    "particles.js": "^2.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "particles.js": "^2.0.0"
+    "vercel": "^33.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
